[package]
name        = "hauchiwa"
version     = "0.8.0"
edition     = "2024"
authors     = ["Maciej Jur <maciej@kamoshi.org>"]
keywords    = ["ssg"]
license     = "GPL-2.0-or-later"
description = "Incredibly flexible static site generator library with incremental rebuilds and cached image optimization"
repository  = "https://github.com/kamoshi/hauchiwa"

[features]
default = ["asyncrt", "styles", "images", "reload", "server"]
asyncrt = ["tokio"]
styles = ["grass"]
images = ["image", "webp"]
reload = ["notify", "notify-debouncer-full", "tungstenite"]
server = ["asyncrt", "axum", "tower-http", "console"]

[dependencies]
camino                  = "1.2"
chrono                  = "0.4"
gray_matter             = { version = "0.3", default-features = false, features = ["yaml", "json"] }
glob                    = "0.3"
rayon                   = "1.11"
serde                   = { version = "1.0", default-features = false, features = ["derive"] }
serde_json              = "1.0"
serde_yaml              = "0.9"
blake3                  = { version = "1.8", features = ["rayon", "mmap"] }
petgraph                = "0.8.3"
crossbeam-channel       = "0.5.15"

# CLI
console                 = { version = "0.16", default-features = false, optional = true }
indicatif               = { version = "0.18", features = ["rayon"] }

# Error handling
anyhow                  = "1.0"
thiserror               = "2.0"

# Feature = "styles"
[dependencies.grass]
version = "0.13"
optional = true
default-features = false
features = ["random"]

# Feature = "images"
[dependencies.image]
version = "0.25"
optional = true

[dependencies.webp]
version = "0.3.1"
optional = true

# Feature = "reload"
[dependencies.notify]
version = "8.0"
optional = true

[dependencies.notify-debouncer-full]
version = "0.6"
optional = true
default-features = false

[dependencies.tungstenite]
version = "0.28"
optional = true

# Feature = "server"
[dependencies.axum]
version = "0.8"
optional = true
default-features = false
features = ["tokio", "http1"]

[dependencies.tokio]
version = "1.48"
optional = true
default-features = false
features = ["rt"]

[dependencies.tower-http]
version = "0.6"
optional = true
default-features = false
features = ["fs"]
