[package]
name        = "hauchiwa"
version     = "0.17.0-unreleased"
edition     = "2024"
authors     = ["Maciej Jur <maciej@kamoshi.org>"]
keywords    = ["ssg"]
license     = "GPL-2.0-or-later"
description = "Flexible static website generator library with incremental rebuilds and cached image optimization"
repository  = "https://github.com/kamoshi/hauchiwa"
homepage    = "https://hauchiwa.kamoshi.org"

[features]
default     = ["grass", "image", "tokio", "live", "server"]
grass       = ["dep:grass"]
image       = ["dep:image"]
tokio       = ["dep:tokio"]
live        = ["dep:notify", "dep:notify-debouncer-full", "dep:tungstenite"]
server      = ["tokio", "dep:axum", "dep:tower-http"]
pagefind    = ["tokio", "dep:pagefind"]
sitemap     = ["dep:sitemap-rs"]
rolldown    = []  # dep disabled until rolldown is published to crates.io
minijinja   = ["dep:minijinja"]
logging     = ["dep:tracing-subscriber"]

[dependencies]
camino                  = "1.2"
ciborium                = "0.2.2"
gray_matter             = { version = "0.3", default-features = false, features = ["yaml", "json"] }
glob                    = "0.3"
rayon                   = "1.11"
serde                   = { version = "1.0", default-features = false, features = ["derive"] }
serde_json              = "1.0"
blake3                  = { version = "1.8", features = ["rayon", "mmap"] }
petgraph                = "0.8.3"
gitscan                 = "0.1.0"

# Error handling
anyhow                  = "1.0"
thiserror               = "2.0"

# CLI
console                 = { version = "0.16", default-features = false }
indicatif               = { version = "0.18", features = ["rayon"] }
tracing                 = "0.1"
tracing-indicatif       = "0.3"

# Feature = "styles"
[dependencies.grass]
version = "0.13"
optional = true
default-features = false
features = ["random"]

# Feature = "images"
[dependencies.image]
version = "0.25"
optional = true

# Feature = "rolldown" (disabled: not yet published on crates.io)
# [dependencies.rolldown]
# git = "https://github.com/rolldown/rolldown"
# rev = "edb8f69"
# optional = true

# Feature = "sitemap"
[dependencies.sitemap-rs]
version = "0.4.0"
optional = true

# Feature = "pagefind"
[dependencies.pagefind]
version = "=1.4"
optional = true
default-features = false

# Feature = "reload"
[dependencies.notify]
version = "8.0"
optional = true

[dependencies.notify-debouncer-full]
version = "0.7"
optional = true
default-features = false

[dependencies.tungstenite]
version = "0.29"
optional = true

# Feature = "server"
[dependencies.axum]
version = "0.8"
optional = true
default-features = false
features = ["tokio", "http1"]

[dependencies.tokio]
version = "1.48"
optional = true
default-features = false
features = ["rt"]

[dependencies.tower-http]
version = "0.6"
optional = true
default-features = false
features = ["fs"]

# Feature = "minijinja"
[dependencies.minijinja]
version = "2"
optional = true

# Feature = "logging"
[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter", "fmt", "registry", "ansi"]
