[package]
name = "docs_gen"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hypertext = "0.12"
comrak = "0.50"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
camino = "1.2"

# The core highlighting logic
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"

[dependencies.hauchiwa]
path = ".."
default-features = false
features = ["grass", "live", "server"]
